<resources>
    <string name="app_name">Project2</string>
    <string name="android_if_else">Android If_Else</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="forget_password">Forget Password</string>
    <string name="welcome_to_signup">WelCome To Signup</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="last_name">Last Name</string>
    <string name="middel_name">Middel Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="enter_mail_adress">Enter mail Adress</string>
    <string name="email_id">Email id</string>
    <string name="next">next</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="_91_9999999999">+91-9999999999</string>
    <string name="next_page">next page</string>
    <string name="enter_mail_id">Enter mail_id</string>
    <string name="password">Password</string>
    <string name="net">Next</string>
    <string name="forget_passwor">Forget Password</string>
    <string name="submit">submit</string>
    <string name="enter_your_mail_id">enter your mail id</string>
</resources>
