<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/signup">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_signup"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_welcomesignup"
        android:textColor="#f00"
        android:textStyle="italic"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_welcomesignup"
        android:hint="@string/first_name"
        android:textSize="17sp"
        android:padding="3dp"
        android:layout_marginTop="60dp"
        android:id="@+id/et_firstname"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/border1"
        android:inputType="text"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/middle_name"
        android:textSize="17sp"
        android:padding="3dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="60dp"
        android:id="@+id/et_middlename"
        android:layout_alignBaseline="@+id/et_lastname"
        android:layout_alignBottom="@+id/et_lastname"
        android:layout_toEndOf="@+id/et_firstname"
        android:background="@drawable/border1"
        android:inputType="text"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:textSize="17sp"
        android:padding="3dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/et_lastname"
        android:background="@drawable/border1"
        android:layout_alignBaseline="@+id/et_firstname"
        android:layout_alignBottom="@+id/et_firstname"
        android:layout_toEndOf="@+id/et_middlename"
        android:inputType="text"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_below="@+id/et_middlename"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="150dp"
        android:padding="9dp"
        android:background="@drawable/border1"
        />


</RelativeLayout>