<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="7dp"
    android:background="@drawable/bgpics">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/android_if_else"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:layout_marginTop="20dp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:id="@+id/tv_android"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:padding="5dp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/border1"
        android:id="@+id/bt_signup"
        android:onClick="buttoncalling"
        android:layout_below="@+id/tv_android"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:padding="5dp"
        android:gravity="center"
        android:onClick="buttoncalling"
        android:layout_marginTop="22dp"
        android:background="@drawable/border1"
        android:id="@+id/bt_emailadd"
        android:layout_below="@+id/bt_signup"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_emailadd"
        android:text="@string/mobile_number"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:padding="5dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="buttoncalling"
        android:background="@drawable/border1"
        android:id="@+id/bt_mobilenum"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_mobilenum"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:padding="5dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="buttoncalling"
        android:background="@drawable/border1"
        android:id="@+id/bt_login"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_login"
        android:text="@string/forget_password"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:padding="5dp"
        android:gravity="center"
        android:onClick="buttoncalling"
        android:layout_marginTop="20dp"
        android:background="@drawable/border1"
        android:id="@+id/bt_forgetpass"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>



</RelativeLayout>