
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:padding="7dp"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#f00"
        android:textStyle="bold"
        android:id="@+id/login"
        android:background="#80000000"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:hint="@string/enter_mail_id"
        android:gravity="center"
        android:padding="7dp"
        android:textSize="20sp"
        android:id="@+id/et_mail"
        android:layout_marginTop="20dp"
        android:background="#80000000"
        android:textColorHint="#ffffff"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_mail"
        android:gravity="center"
        android:padding="7dp"
        android:textSize="20sp"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        android:id="@+id/et_pass"
        android:background="#80000000"
        android:textColorHint="#ffffff"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_pass"
        android:text="@string/net"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:background="#80000000"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>
</RelativeLayout>