<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"

    android:background="@drawable/emailpic">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_mail_adress"
        android:textAlignment="center"
        android:textSize="35sp"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_mailaddress"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#f00"
        android:textStyle="bold"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_mailaddress"
        android:hint="@string/email_id"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="3dp"
        android:layout_marginTop="70dp"
        android:id="@+id/et_emailid"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/border1"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_below="@+id/et_emailid"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="150dp"
        android:padding="9dp"
        android:background="@drawable/border1"
        />
    </RelativeLayout>