<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forget_passwor"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:padding="7dp"
        android:textColor="#f00"
        android:background="#80000000"
        android:id="@+id/tv_forgot"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_forgot"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_your_mail_id"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/et_mailid"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_mailid"
        android:text="@string/submit"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginTop="20dp"
        android:background="#80000000"
        android:padding="10dp"/>


</RelativeLayout>
